<resources>
    <string name="app_name">Open Note Scanner</string>
    <string name="title_activity_open_note_scanner" translatable="false">Open Note Scanner</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_full_image">Scanned Image Viewer</string>
    <string name="images_scanned">Images Scanned</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_delete_text">Do you want to delete this image?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_delete_multiple_text">Do you want to delete the selected images?</string>
    <string name="share_snackbar">Share images through</string>
    <string name="action_about">About</string>
    <string name="about_filename">about.md</string>
    <string name="install_opencv">Install OpenCV Manager</string>
    <string name="confirm_install_opencv">Do you want to download OpenCV Manager from GitHub?</string>
    <string name="answer_cancel">Cancel</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_opencv">Downloading OpenCV Manager</string>
    <string name="scanningToast">Searching for document\nTap again to scan whole image</string>
    <string name="colorMode">Color Mode</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Automatic Mode</string>
    <string name="manualMode">Manual Mode</string>
    <string name="share_app">Share this App</string>
    <string name="share_app_using">Share link through</string>
    <string name="share_app_body">"Take a look at this great app that scans notes, drawings and documents through your camera: "</string>
    <string name="share_app_subject">Great app to scan notes and documents</string>
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="automatic_tagging">Automatic Tagging</string>
    <string name="automatic_tagging_summary">Define automatic tags to be applied on marked scans using the special page template</string>
    <string name="match_aspect">Match preview aspect ratio</string>
    <string name="match_aspect_summary">On several devices the aspect ratio of the preview image does not match the one of the final picture. When turned on, this option will select the highest resolution for the final picture that matches the aspect ratio of the preview image.</string>
    <string name="bug_rotate">Rotate Image 180º</string>
    <string name="bug_rotate_summary">Some devices have the camera upside down, this setting adjusts everything to make sense</string>
    <string name="usage_stats">Usage Statistics</string>
    <string name="usage_stats_summary">Send various usage statistics to developer. No content data will be sent</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_summary">Send message to developer</string>
    <string name="stats_optin_title">Usage Stats</string>
    <string name="stats_optin_text">Do you want to enable Open Note Scanner to send anonymous usage statistics to the developer?\n\nYou can change this anytime on the settings screen.</string>
    <string name="answer_later">Later</string>
    <string name="ask_install_opencv">In order to work, Open Note Scanner needs the services of OpenCV Manager, which is not installed yet.</string>
    <string name="googleplay">Google Play</string>
    <string name="githubdownload">Direct Download</string>
    <string name="activateunknown">Go to Settings</string>
    <string name="messageactivateunknown">Google Play isn\'t available and Install from Unknown Sources is disabled, please go to Settings and activate it.</string>
    <string name="github_project">Project on GitHub</string>
    <string name="github_project_summary">This application is open source, you can help to improve it with feedback, issue reports, code and translations through the GitHub project\'s page</string>
    <string name="donate">Buy me a coffee</string>
    <string name="donate_summary">If you like this application and think it is useful, you may consider making a donation</string>
    <string name="telegram">Telegram Group</string>
    <string name="telegram_summary">Chat about the project on Telegram</string>
    <string name="feedback_and_contributions">Feedback and contributions</string>
    <string name="bitcoin_summary">Donate using Bitcoin cryptocurrency</string>
    <string name="paypal_summary">Many credit cards accepted</string>
    <string name="filterModeOn">Image Processor On</string>
    <string name="filterModeOff">Image Processor Off</string>
    <string name="action_tag">Tag</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="storage_folder_summary">Sets where the scanned files should be stored</string>
    <string name="save_png">Save to PNG Format</string>
    <string name="save_png_summary">Save final images to PNG format. Notice that metadata isn\'t supported yet on PNG, so some features will not be available.</string>
    <string name="format_not_supported">Format not supported</string>
    <string name="format_not_supported_message">Image format doesn\'t support tagging</string>
    <string name="set_scan_topic">Set scan topic</string>
    <string name="cancel">Cancel</string>
    <string name="custom_scan_topic">Custom scan topic</string>
    <string name="scan_topic_dialog_title">Please provide a topic</string>
    <string name="skip_scan_topic">Skip Topic</string>
    <string name="no_files_selected">No files selected.</string>
    <string name="action_pdfexport">Export to PDF</string>
    <string name="googleplay_donation_summary">Make a donation using Google Play, this donation will disable all ads from the app for one year</string>
    <string name="reward_ad_summary">View a Video Ad until it ends, Open Note Scanner will receive a small value. As a reward, all ads from the app will be disabled for one week.</string>
    <string name="reward_ad_title">View an Ad</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="close">Close</string>
    <string name="donation_pending">Previous donation pending</string>
    <string name="custom_scan_topic_summary">Enable setting a custom topic to scan file name</string>
    <string name="standard_tags">Standard tags</string>
    <string name="done">Done</string>
    <string name="scan_topic_placeholder">Please provide a topic</string>
    <string name="document_page_format">Document Page Format</string>
    <string name="pageformat_iso">ISO (a4, a5 and others)</string>
    <string name="pageformat_halfletter">US Half Letter (Rocketbook)</string>
    <string name="pageformat_letter">US Letter</string>
    <string name="pageformat_disabled">Disabled</string>
    <string name="pageformat_custom">Custom</string>
    <string name="permission_explain_request_reason_all">Open Note Scanner requires these permissions to function</string>
    <string name="permission_forward_reason_all">Open Note Scanner requires access to the Camera and Storage to run</string>
    <string name="ok">Ok</string>
</resources>
