<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:title="@string/basic_settings"
            android:persistent="false">
            <PreferenceScreen
                android:title="@string/automatic_tagging"
                android:summary="@string/automatic_tagging_summary"
                >
                <EditTextPreference
                    android:name="tag_rocket"
                    android:title="Rocket"
                    android:defaultValue="rocket"
                    android:key="tag_rocket"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_gift"
                    android:title="Gift"
                    android:defaultValue="gift"
                    android:key="tag_gift"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_tv"
                    android:title="TV"
                    android:defaultValue="tv"
                    android:key="tag_tv"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_bell"
                    android:title="Bell"
                    android:defaultValue="bell"
                    android:key="tag_bell"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_game"
                    android:title="Game"
                    android:defaultValue="game"
                    android:key="tag_game"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_star"
                    android:title="Star"
                    android:defaultValue="star"
                    android:key="tag_star"></EditTextPreference>
                <EditTextPreference
                    android:name="tag_magnet"
                    android:title="Magnet"
                    android:defaultValue="magnet"
                    android:key="tag_magnet">
                </EditTextPreference>
            </PreferenceScreen>
            <CheckBoxPreference
                android:title="@string/match_aspect"
                android:defaultValue="true"
                android:key="match_aspect"
                android:summary="@string/match_aspect_summary"
                ></CheckBoxPreference>
            <CheckBoxPreference
                android:title="@string/bug_rotate"
                android:defaultValue="false"
                android:key="bug_rotate"
                android:summary="@string/bug_rotate_summary"
                ></CheckBoxPreference>
        </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/feedback"
        android:persistent="false">
        <CheckBoxPreference
            android:title="@string/usage_stats"
            android:defaultValue="false"
            android:key="privacy_stats"
            android:summary="@string/usage_stats_summary"
            ></CheckBoxPreference>
        <CheckBoxPreference
            android:title="@string/unique_id"
            android:defaultValue="false"
            android:key="privacy_uuid"
            android:summary="@string/unique_id_summary"
            ></CheckBoxPreference>
        <Preference
            android:title="@string/send_message"
            android:summary="@string/send_message_summary"
            android:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:claudemir@todobom.com"
                ></intent></Preference>

    </PreferenceCategory>

</PreferenceScreen>