<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GalleryGridActivity">

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_tag"
        android:title="@string/action_tag"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_tag"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
